--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Kennesaw State University Online Bookstore</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+</head>
+<body>
+    <div class="wrapper">
+        <div class="heading">
+            <h1>KSU Online Bookstore</h1>
+        </div>
+        <div class="navigation">
+            Navigation
+        </div>
+        <div class="content">
+            Main Content
+        </div>
+        <div class="sidebar">
+            Additional information
+        </div>
+        <div class="footer">
+            This website is developed by Justin Voorhees and company
+        </div>
 
+    </div>
+
+</body>
+</html>
