--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,13 @@
         <div class="heading">
             <h1>KSU Online Bookstore</h1>
         </div>
-        <div class="navigation">
-            Navigation
-        </div>
+            <div class="navigation">
+        <Home><a href="http://localhost:63342/untitled/Index.html">Home</a></Home>
+        <About><a href="http://localhost:63342/untitled/About.html">About</a></About>
+        <Login><a href="http://localhost:63342/untitled/Login.html">Login</a></Login>
+        <Cart><a href="http://localhost:63342/untitled/Cart.html">Cart</a></Cart>
+        <Search>Search</Search>
+             </div>
         <div class="content">
             Main Content
         </div>
