Added Active Page Functionality
Added a function to change the color of the button on the active page

--- a/html/Cart.html
+++ b/html/Cart.html
@@ -11,21 +11,23 @@
         <h1>KSU Online Bookstore</h1>
     </div>
     <div class="navigation">
-        <Home><a href="http://localhost:63342/untitled/Index.html">Home</a></Home>
-        <About><a href="http://localhost:63342/untitled/About.html">About</a></About>
-        <Login><a href="http://localhost:63342/untitled/Login.html">Login</a></Login>
-        <Cart><a href="http://localhost:63342/untitled/Cart.html">Cart</a></Cart>
-        <Search>Search</Search>
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <div class="icon-bar">
+            <a href="http://localhost:63342/SWEBookstore/index.html"><i class="fa fa-home"></i></a>
+            <a href="http://localhost:63342/SWEBookstore/Search.html"><i class="fa fa-search"></i></a>
+            <a href="http://localhost:63342/SWEBookstore/About.html"><i class="fa fa-question"></i></a>
+            <a class="active" href="http://localhost:63342/SWEBookstore/Cart.html"><i class="fa fa-shopping-cart"></i></a>
+            <a href="http://localhost:63342/SWEBookstore/Login.html"><i class="fa fa-male"></i></a>
+        </div>
     </div>
+
+
     <div class="content">
         Main Content
     </div>
-    <div class="sidebar">
-        Additional information
-    </div>
-    <div class="footer">
-        This website is developed by Justin Voorhees and company
-    </div>
+
 
 </div>
 
