--- a/html/Cart.html
+++ b/html/Cart.html
@@ -9,6 +9,7 @@
 <div class="wrapper">
     <div class="heading">
         <h1>KSU Online Bookstore</h1>
+        <img src="ksulogo.png" class ="img-responsive">
     </div>
     <div class="navigation">
         <!-- Add icon library -->
