--- a/html/Search.html
+++ b/html/Search.html
@@ -26,15 +26,14 @@
 
 
     <div class="content">
-        <div id="search_box" class = "center-block text-center"
+        <div id="search_box" class = "center-block text-center">
         <section class="row" id="search_bar">
-            <div class = search_icon id="search_icon">
-                <img src="searchicon.png" alt = "Search Icon" style = "height:5vh; width: 5vh;">
-            </div>
             <form class = search>
-                <input type="text" id="search" placeholder ="Enter Your Search Here...">
+                <div style ="text-align: center;">
+                    <input type="text" id="search" placeholder ="Enter Your Search Here...">
+                </div>
             </form>
-            <div class="filter">
+            <div class="filter" style="float: right;">
                 <label for="search_bar"> Search By:</label>
                 <select id="search_bar">
                     <option value="title">Title</option>
