--- a/html/Login.html
+++ b/html/Login.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Kennesaw State University Online Bookstore</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
+    <script src="main.js"></script>
+    <script src="jQuery.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -29,14 +32,29 @@
         </div>
 
         <div class="container">
-            <label><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <form class="form" name="frmName">
+                Username <input type="text" placeholder = "Username" name="username">
+                Password <input type="text" placeholder = "Password" name="password">
+                <input type="submit" value="Submit" >
+            </form>
 
-            <label><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
-
-            <button type="submit">Login</button>
         </div>
+
+    <script type="text/javascript">
+        var user="testuser";
+        var pass="123456789"
+
+        //.click shows alert. need to find alternative
+        $('form').click(function(){
+            if ($('input[name=username]').val()==user && $('input[name=password]').val()==pass){
+                alert("You have successfully been logged on!");
+            }
+            else{
+                alert("Username and/or password do not match");
+            }
+        });
+
+        </script>
 
         <div class="container" style="background-color:#f1f1f1">
         </div>
