--- a/html/About.html
+++ b/html/About.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Kennesaw State University Online Bookstore</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
+    <script src="jQuery.js"></script>
+    <script src="webMain.js"></script>
+    <script src="cookies.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -16,17 +20,41 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <div class="icon-bar">
-            <a href="http://localhost:63342/SWEBookstore/index.html"><i class="fa fa-home"></i></a>
-            <a href="http://localhost:63342/SWEBookstore/Search.html"><i class="fa fa-search"></i></a>
-            <a class="active" href="http://localhost:63342/SWEBookstore/About.html"><i class="fa fa-question"></i></a>
-            <a href="http://localhost:63342/SWEBookstore/Cart.html"><i class="fa fa-shopping-cart"></i></a>
-            <a href="http://localhost:63342/SWEBookstore/Login.html"><i class="fa fa-male"></i></a>
+            <a href="http://localhost:63342/test/index.html"><i class="fa fa-home"></i></a>
+            <a href="http://localhost:63342/test/Search.html"><i class="fa fa-search"></i></a>
+            <a class="active" href="http://localhost:63342/test/About.html"><i class="fa fa-question"></i></a>
+            <a href="javascript:checkout();"><i class="fa fa-shopping-cart"></i></a>
+            <a href="http://localhost:63342/test/Login.html"><i class="fa fa-male"></i></a>
         </div>
     </div>
 
 
     <div class="content">
-        Main Content
+        <h1><center>***Book purchasing can be made from the beginning of Phase 1 registration to the end of Phase 3 registration***</center></h1>
+        <p></p>
+        <h1><u>Contact Us</u></h1>
+        <p><font size="6" color="black">Jenny (Administrative Assistant)</font></p>
+        <font size="4" color="black"><u>Phone:</u> 404-867-5309</font><p></p>
+        <font size="4" color="black"><u>Email:</u> bigdawgjenny@kennesaw.edu</font>
+    <p></p>
+       <p> <font size="6" color="black">I. B. Greedy (Bursar)</font></p>
+        <font size="4" color="black"><u>Phone:</u> 800-273-8255</font><p></p>
+        <font size="4" color="black"><u>Email:</u> greedyyoufeelme@kennesaw.edu</font>
+
+        <p></p>
+        <p> <font size="6" color="black">Bill Bixby (Registrar)</font></p>
+        <font size="4" color="black"><u>Phone:</u> 800-799-7233</font><p></p>
+        <font size="4" color="black"><u>Email:</u> billofthehill@kennesaw.edu</font>
+
+        <p></p>
+        <p> <font size="6" color="black">John (Bookstore Manager)</font></p>
+        <font size="4" color="black"><u>Phone:</u> 770-321-0636</font><p></p>
+        <font size="4" color="black"><u>Email:</u> johnthebomb@kennesaw.edu</font>
+
+
+
+
+
     </div>
 
 
