--- a/html/About.html
+++ b/html/About.html
@@ -30,7 +30,7 @@
 
 
     <div class="content">
-        <h1><center>***Book purchasing can be made from the beginning of Phase 1 registration to the end of Phase 3 registration***</center></h1>
+        <h1><center>***Book purchasing can be made from the beginning of Phase 1 registration to the end of the 15th class day***</center></h1>
         <p></p>
         <h1><u>Contact Us</u></h1>
         <p><font size="6" color="black">Jenny (Administrative Assistant)</font></p>
